syntax = "proto3";
package ethermint.feemarket.v1;

option go_package = "github.com/EscanBE/evermint/x/feemarket/types";

// EventFeeMarket is the event type for the x/feemarket module
message EventFeeMarket {
  // base_fee for EIP-1559 blocks
  string base_fee = 1;
}
