syntax = "proto3";
package ethermint.types.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/EscanBE/evermint/types";

// TxResult is the value stored in eth tx indexer
message TxResult {
  option (gogoproto.goproto_getters) = false;

  // height of the blockchain
  int64 height = 1;
  // tx_index of the cosmos transaction
  uint32 tx_index = 2;

  // eth_tx_index is the index in the list of valid eth tx in the block,
  // aka. the transaction list returned by eth_getBlock api.
  int32 eth_tx_index = 3;
  // failed is true if the eth transaction did not go succeed
  bool failed = 4;
}
